@@ -9,6 +9,15 @@ year = 2009,
 doi = "10.1137/070687293",
 }
 
+@incollection{FormanDiscreteMorseTheory,
+author = "Robin Forman",
+title = "A user's guide to discrete {M}orse theory",
+booktitle = "S\'eminaire Lotharingien de Combinatoire",
+volume = 48,
+year = 2002
+url = {https://www.mat.univie.ac.at/~slc/s/s48forman.html},
+}
+
 @book{GhristAppliedTopology,
 author = "Robert Ghrist",
 title = "Elementary applied topology",
