@@ -1,10 +1,11 @@
 Version 1.1.1
 
    - Changed newSimplex() on representation to use faces rather than dimension
-   - Added an Isomorphiosm class to simplify some mappings
+   - Added an Isomorphism class to simplify some mappings
    - Added GraphRepresentation for more efficient low-order complexes
    - Added a method for extracting the coboundary matrix of a complex
    - Added simplicial functions with various representations
+   - Added the basic elements of discrete Morse theory
 
 Version 1.0.1 (16Sep2022)
 
